--- a/.github/workflows/auto-reviewer.yml
+++ b/.github/workflows/auto-reviewer.yml
@@ -5,14 +5,12 @@ name: Assign Reviewers
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
-  pull_request:
-    types: [opend, ready_for_review]
+  - pull_request_target
 
 jobs:
-  assign:
+  add-reviews:
     runs-on: ubuntu-latest
     steps:
-      - uses: hkusu/review-assign-action@v1
+      - uses: kentaro-m/auto-assign-action@v1.2.4
         with:
-          assignees: ${{ github.actor }}
-          reviewers: marong0309, SMARAGD88, AlBaneo93
+          configuration-path: ".github/auto_assign.yml"
