--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -15,6 +15,9 @@ assignees:
 # Uses numberOfReviewers if unset.
 numberOfAssignees: 0
 
+numberOfReviewers: 0
+
+
 # A list of keywords to be skipped the process that add reviewers if pull requests include it
 skipKeywords:
   - wip
