--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -6,7 +6,7 @@ addAssignees: author
 
 # A list of assignees, overrides reviewers if set
 assignees:
-  - AlBaneo93
+  - AlBan
   - SMARAGD88
   - marong0309
 
