--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -23,6 +23,7 @@
 		"react/prop-types": "off", // Typescript에서 props type 제어
 		"jsx-a11y/anchor-is-valid": "off", // a 태그 내에 속성 유무 검사
 		"react/jsx-props-no-spreading": "off", // props spreading 설정
+		"import/prefer-default-export": "off", // 한 파일 내에 export 여러개 못하도록 설정
 		"import/no-extraneous-dependencies": "off", // dependencies, peerDependencies, optionalDependencies에 명시되지 않은 패키지의 가져오기를 금지
 		"jsx-a11y/label-has-associated-control": "off", // <label> 연관 html label 태그 필수 처리
 		"key-spacing": ["error", { "beforeColon": false, "afterColon": true }], // javascript 콜론사이 공백제어
